# SPARQL-Queries

./: .gitignore  README.md  pyproject.toml
configs/: config.yaml
configs/benchmark/: lcquad_2_0.yaml  test_mini.yaml
configs/model/: qwen_32b_coder.yaml  qwen_32b_coder_awq.yaml  qwen_32b_coder_gptq_int8.yaml  qwen_32b_instruct.yaml  qwen_32b_instruct_awq.yaml  qwen_32b_instruct_gptq_int8.yaml  qwen_72b_instruct.yaml  qwen_72b_instruct_awq.yaml  qwen_72b_instruct_gptq_int8.yaml  qwen_7b_coder.yaml  qwen_7b_coder_awq.yaml  qwen_7b_coder_gptq_int8.yaml  qwen_7b_instruct.yaml  qwen_7b_instruct_awq.yaml  qwen_7b_instruct_gptq_int8.yaml
configs/prompt/: cot.yaml  few_shot.yaml  no_shot.yaml
outputs/experiments/RQ1/1_prompt/: results_overview_prompt.txt
outputs/experiments/RQ1/1_prompt/cot/: overview.txt
outputs/experiments/RQ1/2_schema/: results_overview_schema.txt
outputs/experiments/RQ1/3_model/: results_overview_models.txt
outputs/experiments/RQ2_&_3/: results_overview_quant.txt
outputs/sonstiges/: drop_log__exampel.jsonl
sh_files/data/: generate_data.sh  verify_data.sh
sh_files/download_models/: 1_full_models.sh  2_quant_models.sh
sh_files/server/: run_pipeline.sh
src/: main.py  utils.py
src/data/: data_generator.py  lcquad_loader.py  types.py  verify_data.py
src/inference/: engine.py
src/metrics/: evaluator.py  exporter.py
src/prompts/: base_strategy.py  cot_strategy.py  few_shot_strategy.py  no_shot_strategy.py
src/validation/: execution_engine.py  schema_linker.py  semantic_checker.py  syntax_parser.py
(+95 files in other folders)
