[project]
name = "Bachelor"
version = "0.1.0"
description = "Bachelorarbeit: Evaluierung von lokalen LLMs im Text-to-SPARQL Kontext"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "accelerate>=1.14.0",
    "asyncio>=4.0.0",
    "huggingface-hub>=1.20.1",
    "hydra-core>=1.3.2",
    "numpy>=2.2.6",
    "omegaconf>=2.3.0",
    "openai>=2.43.0",
    "pyoxigraph>=0.5.9",
    "rdflib>=7.0.0",
    "sparqlwrapper>=2.0.0",
    "torch>=2.2.1",       # <-- Tippfehler korrigiert (auf 2.2.1)
    "torrentool>=1.2.0",
    "transformers>=5.12.1",
    "vllm>=0.4.0",        # <-- Geupdatet und als einzige vllm-Zeile behalten
]

[project.optional-dependencies]
dev = ["pytest", "black", "isort"]

[dependency-groups]
# Entwicklungswerkzeuge, die nicht auf dem Server installiert werden müssen
dev = [         # Für deine Unit-Tests im /tests Ordner
    "pytest>=8.0.0",
    "pytest-asyncio>=1.4.0",
]
